# CNNEdgeExtractor

./: .gitignore  CONFIG.py  README.md  RESTRUCTURING_NOTES.md  main.py  predict_slope_full_dem.py  pyproject.toml  requirements.txt  start_base_train.py  train_slope.py
app/base/dem/: Dem.py
app/base/dem/dem_calculators/: DEMMorphometryCalculator.py  DemCannyFilter.py
app/base/dem/dem_creators/: DemCreatorFromMesh.py  DemCreatorFromMeshMultiRays.py
app/base/dem/dem_loader/: RasterioDemLoader.py
app/base/dem/dem_saver/: RasterioDemSaver.py
app/base/dem/plotters/: MplDemPlotter.py
app/base/mesh/: Mesh.py  MeshIterator.py
app/cnn_pytorch/: DEMPredictor.py  DoubleConv.py  QuarryEdgeDataset.py  __QuarryEdgeDataset.py  aug_unet_learning.py  train_unet.py
configs/: data.yaml  predict.yaml  train.yaml
data/: build_processed_from_raw_tiles.py  build_processed_slope_dataset.py
data/1m/100/: bd_res_1m_4.tif  line_res_1m_2.tif  line_res_1m_9.tif
data/raw/: Grib_dxf_mesh.dxf
src/cnn_edge_extractor/: configs.py
src/cnn_edge_extractor/cli/: evaluate.py  predict.py  prepare_data.py  train.py
src/cnn_edge_extractor/data/: dataset.py  prepare.py
src/cnn_edge_extractor/domain/: Point.py  Triangle.py
src/cnn_edge_extractor/inference/: predict_full_dem.py  predictor.py
src/cnn_edge_extractor/models/: unet.py
src/cnn_edge_extractor/training/: engine.py  evaluate.py  factory.py  losses.py  metrics.py  run.py
src/cnn_edge_extractor/utils/: config.py
utils/: data_cropper.py  dxf_line_files_cleaner.py  dxf_lines_to_geotiff.py
(+45 files in other folders)
