[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnn-edge-extractor"
version = "0.1.0"
description = "Edge extraction on quarry DEMs with geospatial preprocessing and U-Net inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "rasterio",
  "matplotlib",
  "tqdm",
  "albumentations",
  "scikit-image",
  "scipy",
  "numba",
  "ezdxf"
]

[project.scripts]
cnne-prepare-data = "cnn_edge_extractor.cli.prepare_data:main"
cnne-train = "cnn_edge_extractor.cli.train:main"
cnne-predict = "cnn_edge_extractor.cli.predict:main"
cnne-evaluate = "cnn_edge_extractor.cli.evaluate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
